@@ -1,3 +1,8 @@
+Zmiany w QMPlay2 build 14.12.28:
+	- poprawione wczytywanie czcionek z katalogu z napisami (nie sa przeszkiwane rekursywnie),
+	- główny pasek narzędzi może być oddokowany od głównego okna,
+	- poprawiony crash programu skompilowanego z AVResample,
+
 Zmiany w QMPlay2 build 14.12.23:
 	- poprawione przerywanie odtwarzania podczas pracy "youtube-dl" oraz z protokołami innymi niż HTTP i HTTPS,
 	- możliwość przewijania do tyłu w strumieniach sieciowych bez ponownego łączenia się z serwerem,
